# DrunkenMan3

./: .depend  .gitignore  Makefile  Makefile.am  Makefile.in  Makefile.oold  TChannel.cpp  TChannel.cpp.sicher  TChannel.h  TConfig.cpp  TConfig.h  TConfigReadOnly.h  TConnection.cpp  TConnection.h  TConnectionInterface.h  TODO  TPlugin.cpp  TPlugin.h  TPluginParent.cpp  TPluginParent.h  TPluginParentLight.cpp.old  TPluginParentLight.h  TSession.cpp  TSession.h  TUserList.cpp  TUserList.h  compile  compile.bas  config.h  config.h.in  config.status  configure  configure.in  conftest  conftest.cpp  main.cpp  main.h  main2  manage0.bas  myfuncs.cpp  (+5 more)
autom4te.cache/: output.0  output.2  traces.0  traces.1  traces.2
etc/: autoload.conf  drunkenman.conf  localhost
etc/freenode.net/: .users.txt.swp  masters.txt  users.txt
plugins/: Makefile  antirejoin.cpp  build.sh  build.sh.old  finddoubles.cpp  finddoubles2  finddoubles2.cpp  greet.cpp  keepnick.cpp  msgtest.cpp  ops.cpp  ops.cpp.additional  pass.cpp  pong.cpp  postconnect.cpp  quit.cpp  rejoin.cpp  rejoin.cpp.stabil  say.cpp  send.cpp  test.cpp  usertest.cpp  votekick.cpp
plugins/alt/: autoghost.cpp  bar.cpp  display.cpp  display2.cpp  foo.cpp  ircsend.cpp  pong.cpp  say.cpp  send.cpp  test.cpp
